.sisyphus/evidence/task-2-red-state.txt
   Compiling opalescent v0.1.0 (/home/justi/Projects/opalescent)
error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:521:22
    |
521 |         let result = validate_module_file_role(Path::new("test.op"), &program);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:538:22
    |
538 |         let result = validate_module_file_role(Path::new("test.op"), &program);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:561:22
    |
561 |         let result = validate_module_file_role(Path::new("test.types.op"), &program);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:578:22
    |
578 |         let result = validate_module_file_role(Path::new("test.types.op"), &program);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:601:22
    |
601 |         let result = validate_module_file_role(Path::new("test.types.op"), &program);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:624:22
    |
624 |         let result = validate_module_file_role(Path::new("test.types.op"), &program);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `validate_module_file_role` in this scope
   --> src/module_loader.rs:647:22
    |
